<resources>
    <string name="app_name">Happy Foot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_survey">Daily Survey</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_register">Sign up</string>
    <string name="menu_diagnostic_record">Diagnostic Record</string>
    <string name="menu_login">Login</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_survey_start">Start</string>
    <string name="menu_survey_question">Question</string>
    <!--Daily Survey String -->
    <string name="sloganTakePicture">Take picture of your foot</string>
    <string name="sloganMeasure">Connect your device</string>
    <string name="take_picture">Take a picture of your foot</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_sugar_levels">Blood Sugar Level</string>
    <string name="foot_feeling">How does your foot feel?</string>
    <string name="feeling_no_feeling">No feelings</string>
    <string name="feeling_burning">Burning</string>
    <string name="feeling_dull">Dull</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="progress">1/5</string>
    <string name="question_one">What is your type of ulcer?</string>
    <string name="intro">This survey will help us understand your condition better and give appropriate suggestions</string>
    <string name="greetings">Hello, Dear Patient</string>
    <string name="test">this is testing</string>
    <string name="title">Daily Survey</string>
    <string name="finish_words">Thanks for your cooperation, Your report is generating(go back to report page)</string>
    <string name="q0">What is your type of ulcer?</string>
    <string name="q1">Have you noticed any recent increase in pain in your foot?</string>
    <string name="q2">Can you see your bone in the picture of your foot?</string>
    <string name="q3">Have you noticed any dark, dead tissue in your foot in the last 14 days?</string>
    <string name="q4">Can you feel a pulse in your foot?</string>
    <string name="q5">Has your infection recently worsened?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sol_is">ischemia advice</string>
    <string name="sol_in">infection advice</string>
    <string name="sol_bo">both advice</string>
    <string name="sol_no">none advice</string>
    <string name="sol_da">call 911</string>
    <!--arduino measurement-->
    <string name="notification">Please put your foot on sensor</string>
    <string name="skip">SKIP</string>
    <string name="data">data</string>
    <string name="measure">Measure</string>
    <string name="no_bluetooth">no bluetooth</string>
    <string name="find_device">Connecting to arduino</string>
    <string name="waiting_response">receiving data</string>
    <!--Welcome View String -->
    <string name="hey">Hey</string>
    <string name="welcome_dfu_assistant">Hey there, \n Welcome to Happy Foot Diabetic Foot Ulcer(DFU) assistant, \n What can we help you with today?</string>
    <string name="daily_dfu_check">Daily Medical Check</string>
    <string name="medical_record">Medical Record</string>
    <string name="more_info">DFU Information</string>
    <string name="diagnosis_report">Diagnosis Report</string>
    <string name="review">View Records</string>
    <!--Register View String -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="accountName">Account Name</string>
    <string name="password">Password</string>
    <string name="weight">Weight</string>
    <string name="lb">lb</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="age">Age</string>
    <string name="confirm">Confirm</string>
    <string name="nextStep">Next Step</string>
    <string name="haveAccount">Have Account?</string>
    <string name="sloganWhatYourName">What\'s your name?</string>
    <string name="sloganSetPassword">Set your password</string>
    <string name="sloganPersonalInfo">Personal Information</string>
    <string name="show_password">Show password</string>
    <!--Record View String -->
    <string name="diagnosis_result">Diagnosis Result</string>
    <string name="medical_suggestion">Medical Suggestion</string>
    <string name="no_record">No record</string>
    <string name="ischemia">Ischemia</string>
    <string name="infection">Infection</string>
    <string name="Both">Both</string>
    <string name="noUlcerFound">No ulcer found</string>
    <!--Recommendation Source-->
    <string name="recommendation1">Avoiding soaking of the feet.</string>
    <string name="recommendation2">Having your shoes professionally fitted.</string>
    <string name="recommendation3">Quitting smoking</string>
    <string name="recommendation4">Exercising regularly and eating a well-balanced diabetic diet.</string>
    <!--Login View String -->
    <string name="register">Sign up</string>
    <string name="login">Sign in </string>
    <!--Setting view -->
    <string name="sign_out">Sign out</string>
    <string name="remove_all_data">Remove all records</string>
    <string name="user_info">User Information</string>
    <string name="remove_all_slogan">Note!! If you click this button, all records will be cleared!!</string>
    <!--Error message  String -->
    <string name="emptyInput"> Empty Input</string>
    <string name="password_mismatch"> Those passwords don’t match. Try again.</string>
    <string name="account_exist"> The account existed. Try again.</string>
    <string name="login_fail"> Your login credentials don\'t match an account in our system</string>
    <string name="internet_unavailable"> Internet unavailable</string>
</resources>
