<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/personal_info_slogan_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/sloganPersonalInfo"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/personal_info_slogan_text"
        app:layout_constraintTop_toBottomOf="@id/personal_info_slogan_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/weight_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_edit_text"
            android:padding="12dp"
            android:hint="@string/lb"
            android:gravity="center|end"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/weight_text"
        app:layout_constraintTop_toBottomOf="@id/weight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_feet"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_feet_edit_text"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:gravity="center|end"
            android:textAlignment="center"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_inch"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_inch_edit_text"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inch"
            android:gravity="center|end"
            android:textAlignment="center"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/height_feet"
        app:layout_constraintTop_toBottomOf="@id/height_feet" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_edit_text"
            android:hint="@string/age"
            android:padding="12dp"
            android:gravity="center|end"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/age" />
    <Button
        android:id="@+id/return_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/haveAccount"
        android:textColor="@color/purple_700"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/age"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>