<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/create_slogan_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/sloganSetPassword"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/create_slogan_text"
        app:layout_constraintTop_toBottomOf="@id/create_slogan_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="160dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="@id/password_text"
        app:layout_constraintTop_toBottomOf="@id/password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordConfirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirm"
        android:layout_width="160dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="@id/passwordConfirm_text"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirm_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirm_edit_text"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/show_password_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/show_password"
        app:layout_constraintEnd_toEndOf="@id/passwordConfirm"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/nextStep_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nextStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/show_password_switch"
        app:layout_constraintTop_toBottomOf="@+id/show_password_switch" />
    <Button
        android:id="@+id/return_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/haveAccount"
        android:textColor="@color/purple_700"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>