<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome_dfu_assistant"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/foot_image"
        android:layout_width="288dp"
        android:layout_height="219dp"
        app:srcCompat="@drawable/icons_doctor2"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <Button
            android:id="@+id/daily_survey_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/daily_dfu_check"
            app:layout_constraintEnd_toEndOf="@+id/foot_image"
            app:layout_constraintStart_toStartOf="@+id/foot_image"
            app:layout_constraintTop_toBottomOf="@+id/foot_image" />
        <Button
            android:id="@+id/diagnosis_record_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/medical_record"
            app:layout_constraintEnd_toEndOf="@+id/daily_survey_button"
            app:layout_constraintStart_toStartOf="@+id/daily_survey_button"
            app:layout_constraintTop_toBottomOf="@+id/daily_survey_button" />
        <Button
            android:id="@+id/more_info_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/more_info"
            app:layout_constraintEnd_toEndOf="@+id/diagnosis_record_button"
            app:layout_constraintStart_toStartOf="@+id/diagnosis_record_button"
            app:layout_constraintTop_toBottomOf="@+id/diagnosis_record_button" />


</androidx.constraintlayout.widget.ConstraintLayout>